force-app/main/default/objects/custom_create98__c/custom_create98__c.object-meta.xml
<CustomObject>
    <label>Custom created object98</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects98</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>