force-app/main/default/objects/custom_create98__c/fields/custom_create_98field504__c.field-meta.xml
<CustomField>
    <fullName>custom_create_98field504__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 98field504</label>
    <type>Checkbox</type>
</CustomField>